# SwingORBSwung

./: .claudeignore  .env.example  .gitignore  .worktreeinclude  CLAUDE.md  claude_code_trading_engine_outline.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: guard-execution.sh  lint-types.sh  run-tests.sh
config/: settings.yaml  universe.yaml
docs/: strategy_spec.md
prompts/: 00_foundation.md  01_data_layer.md  02_features.md  03_storage.md  04_alerts.md  05_scanners.md  06_setups.md  07_risk_contracts.md  08_orchestration.md  README.md
scripts/: get_telegram_chat_id.py  send_telegram_test.py
tests/: conftest.py  test_smoke.py
tests/alerts/: test_alerts.py  test_formatter.py
tests/data/: test_caching_options.py  test_polygon.py  test_polygon_normalize.py  test_universe_resolve.py
tests/features/: test_compression.py  test_indicators.py  test_relative_strength.py  test_sector_rank.py  test_trend.py  test_volume.py
tests/fixtures/: __init__.py
tests/integration/: test_e2e.py  test_hermes_mcp.py
tests/risk/: test_risk.py
tests/scanners/: test_market_regime.py  test_scanners.py  test_universe_and_ranker.py
tests/services/: test_alert_gate.py  test_backtest.py  test_day_trade_liquidity.py  test_execution_layer.py  test_market_hours.py  test_pipeline_e2e.py  test_wallet.py
tests/setups/: conftest.py  test_setups.py
tests/storage/: test_repositories.py  test_repository.py
trading_engine/: __init__.py  __main__.py  app.py
trading_engine/alerts/: __init__.py  console.py  dedupe.py  formatter.py  sinks.py  telegram.py  telegram_config.py
trading_engine/core/: config.py  interfaces.py  types.py
trading_engine/data/: __init__.py  cache.py  caching_options.py  chained_options.py  factory.py  mock_provider.py  polygon.py  polygon_provider.py  universe.py  yfinance_options.py
trading_engine/features/: __init__.py  compression.py  indicators.py  relative_strength.py  sector_rank.py  trend.py  volume.py
trading_engine/integrations/: __init__.py  hermes_mcp.py
trading_engine/risk/: __init__.py  contract_selector.py  position_sizing.py  risk_class.py  trade_management.py
trading_engine/scanners/: __init__.py  market_regime.py  sector_rank.py  stock_ranker.py  universe_builder.py
trading_engine/services/: __init__.py  backfill.py  backtest.py  confirmation.py  follow_up_service.py  management_service.py  market_hours.py  paper_tracker.py  scheduler.py  signal_service.py
trading_engine/setups/: __init__.py  base.py  breakout_continuation.py  breakout_retest.py  compression_break.py  ema_continuation.py  index_tactical.py  levels.py  registry.py  relative_weakness.py
trading_engine/storage/: __init__.py  db.py  in_memory.py  models.py  repository.py  serializers.py  sql.py
trading_engine/testing/: synthetic.py
(+1 files in other folders)
