[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading_engine"
version = "0.0.1"
description = "Systematic momentum options research engine (alert/paper-only)."
readme = "docs/strategy_spec.md"
requires-python = ">=3.11"
authors = [{ name = "jdharmelin" }]
license = { text = "Proprietary" }
dependencies = [
    "pydantic>=2.6",
    "pandas>=2.2",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "sqlalchemy>=2.0",
    "python-telegram-bot>=21.0",
    "yfinance>=0.2.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML",
    "pandas-stubs",
]

[tool.setuptools.packages.find]
include = ["trading_engine*"]
exclude = ["tests*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
disallow_untyped_decorators = false
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "trading_engine.data.mock_provider"
disallow_any_generics = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
